// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropDownField rendering renders expected elements 1`] = `
<div
  className="DropDownField"
>
  <div
    className="DropDownField__label"
  >
    <Label
      id="test-label"
      text="Test"
    />
  </div>
  <Select
    aria-labelledby="test-label"
    className="DropDownField__select"
    error={false}
    getOptionValue={[MockFunction]}
    id="test"
    onChange={[MockFunction]}
    options={
      Array [
        "o0",
        "o1",
      ]
    }
    renderOption={[Function]}
    value="o0"
  />
  <FieldError
    alignment="right"
  />
</div>
`;

exports[`DropDownField rendering renders expected elements when className is set 1`] = `
<div
  className="DropDownField TestClass"
>
  <div
    className="DropDownField__label"
  >
    <Label
      id="test-label"
      text="Test"
    />
  </div>
  <Select
    aria-labelledby="test-label"
    className="DropDownField__select"
    error={false}
    getOptionValue={[MockFunction]}
    id="test"
    onChange={[MockFunction]}
    options={
      Array [
        "o0",
        "o1",
      ]
    }
    renderOption={[Function]}
    value="o0"
  />
  <FieldError
    alignment="right"
  />
</div>
`;

exports[`DropDownField rendering renders expected elements when error is set 1`] = `
<div
  className="DropDownField"
>
  <div
    className="DropDownField__label"
  >
    <Label
      id="test-label"
      text="Test"
    />
  </div>
  <Select
    aria-labelledby="test-label"
    className="DropDownField__select"
    error={true}
    getOptionValue={[MockFunction]}
    id="test"
    onChange={[MockFunction]}
    options={
      Array [
        Object {
          "text": "Option 0",
          "value": "o0",
        },
        Object {
          "text": "Option 1",
          "value": "o1",
        },
      ]
    }
    renderOption={[Function]}
    value="o0"
  />
  <FieldError
    alignment="right"
    text="Error"
  />
</div>
`;
